Fixed navbar on mobile

--- a/public/styles/allstyles.css
+++ b/public/styles/allstyles.css
@@ -74,6 +74,7 @@
         background-color: var(--nav-background-color);
         border-radius: 10px;
         justify-content: center;
+        z-index: 1;
     }
 
     .nav-links {
@@ -81,6 +82,7 @@
         font-size: 20px;
         font-family: Tahoma;
         font-weight: bold;
+        z-index: 2;
     }
 
     .navigation-icons-bar {
@@ -88,7 +90,7 @@
         margin-top: 50px;
         width: 70%;
         height: 20px;
-        z-index: 1;
+        z-index: 2;
         
     }
 
